fixed contact links, reduced letter-spacing

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -3,7 +3,7 @@ body {
     background: @main_brown url("/img/dark_bg.png") repeat;
     color: #FFF;
     font-weight:100;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
 }
 h1 {
     font-family: @title_family;
